--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,57 @@
 * {
   box-sizing: border-box;
   text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.contactList {
+  /* display: flex; */
+  justify-content: center;
+}
+
+.contact {
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 100px;
+  border-collapse: collapse;
+}
+
+th {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: flex-start;
+  border: 1px solid;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+label {
+  background: #b7c1c9;
+  padding: 12px;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+
 input {
-  width: 25% !important;
-  margin-right: 0.25em!important;
-  margin-left: 0.25em!important;
+  border-radius: 3px;
+}
+
+#addbtn {
+  height: 20px;
+  width: 112px;
+  border-radius: 3px;
+  color: white;
+  background-color: lightseagreen;
+}
+
+#btn {
+  height: 20px;
+  width: 60px;
+  border-radius: 3px;
+  color: white;
+  background-color: lightseagreen;
 }
 
 body {
